// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PivotConfigGenerator should add a event annotation config when configured 1`] = `
{
  "config": {
    "column_groups": [],
    "id": "vals",
    "rollup": false,
    "row_groups": [
      {
        "field": "field",
        "limit": 15,
        "type": "type",
      },
    ],
    "series": [
      {
        "id": "count",
      },
    ],
    "sort": [],
  },
  "id": Any<String>,
  "name": "chart",
  "type": "pivot",
}
`;

exports[`PivotConfigGenerator should add a event annotation config when configured 2`] = `
{
  "id": Any<String>,
  "name": "events",
  "type": "events",
}
`;

exports[`PivotConfigGenerator should generate a chart config 1`] = `
{
  "column_groups": [],
  "id": Any<String>,
  "rollup": false,
  "row_groups": [
    {
      "field": "field",
      "limit": 15,
      "type": "type",
    },
  ],
  "series": [
    {
      "id": "count",
    },
  ],
  "sort": [],
}
`;

exports[`PivotConfigGenerator should generate a number config with trend 1`] = `
{
  "config": {
    "column_groups": [],
    "id": "vals",
    "rollup": false,
    "row_groups": [
      {
        "field": "field",
        "limit": 15,
        "type": "type",
      },
    ],
    "series": [
      {
        "id": "count",
      },
    ],
    "sort": [],
  },
  "id": Any<String>,
  "name": "chart",
  "type": "pivot",
}
`;

exports[`PivotConfigGenerator should generate a number config with trend 2`] = `
{
  "config": {
    "column_groups": [],
    "id": "vals",
    "rollup": false,
    "row_groups": [
      {
        "field": "field",
        "limit": 15,
        "type": "type",
      },
    ],
    "series": [
      {
        "id": "count",
      },
    ],
    "sort": [],
  },
  "id": Any<String>,
  "name": "trend",
  "timerange": {
    "id": Any<String>,
    "source": "search_type",
    "type": "offset",
  },
  "type": "pivot",
}
`;
